# cursor-rules-templates

./: .gitignore  CLAUDE.md  LICENSE  README.md
claude-templates/: CLAUDE.md
claude-templates/.rules/: python.md
cursor-templates/: .cursorrules
cursor-templates/config/: pre-commit
cursor-templates/core_rules/: documentation.mdc  testing.mdc
cursor-templates/planning/advanced-taskmaster/: taskmaster_reference.mdc
cursor-templates/planning/simple/: dev_workflow.mdc
shared/.context-template/: plan.md  research.md
shared/config/: pytest.ini
templates/config/: gitignore-template  mkdocs.yml  pyproject.toml
templates/core_rules/: ci_cd.mdc  cursor_rules.mdc  documentation.mdc  essential.mdc  self_improve.mdc  testing.mdc
templates/github/workflows/: docs.yml  release.yml  test.yml
templates/planning/simple/: README.md  dev_workflow.mdc  plan.md
templates/planning/taskmaster/: README.md  dev_workflow.mdc
